src/components/modal/styles/modal-frame.scss
.modal-container {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    // This prevents FF from allowing the wrapper to be scrollable
    // since it is animating from offscreen in the "hidden" part of
    // this container.
    // overflow: hidden;

    &.show {
        .wrapper {
            transform: translateY(0);
        }

        .overlay {
            opacity: 1;
        }
    }
}

.overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(108, 115, 120, 0.85);
    transition: opacity 350ms;
    opacity: 0;
    z-index: -1;
}

.overlay-side {
    position: absolute;
    top: 0;
    height: 100%;
    z-index: 2;
}

.wrapper {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    transition: transform 350ms;
    transform: translateY(100%);
}

.main {
    -webkit-overflow-scrolling: touch;
    /*overflow-scrolling: touch;*/
    -moz-overflow-scrolling: touch;
    position: relative;
    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0), 0 5px 15px 0 rgba(0, 0, 0, 0);
    transition: box-shadow 350ms;
}

